--- a/super-schedule-api/.settings/org.eclipse.wst.common.component
+++ b/super-schedule-api/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,12 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="super-schedule-business-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/super-schedule-business/super-schedule-business">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="super-schedule-model-1.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/super-schedule-model/super-schedule-model">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="super-schedule-api"/>
         <property name="java-output-path" value="/super-schedule-api/target/classes"/>
     </wb-module>
